demo-project/mongo-express-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-external-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer # external
  ports:
    - protocol: TCP
      port: 8081 # port of the service itself
      targetPort: 8081 # port of the mongo-express service
      nodePort: 30000 # port that is exposed to the external world (browser)
