demo-project/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
    - protocol: TCP
      port: 8081 # port of the service itself
      targetPort: 8081 # port of the mongo-express service
